--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "@angular/platform-browser": "~16.0.0",
     "@angular/platform-browser-dynamic": "~16.0.0",
     "@angular/router": "~16.0.0",
+    "@ng-icons/core": "^25.0.1",
+    "@ng-icons/heroicons": "^25.0.1",
     "@nx/angular": "16.2.2",
+    "daisyui": "^2.51.6",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
